@@ -1,12 +1,11 @@
 name = File-DataClass-Storage-YAML
 
 [Prereqs]
-perl                               = 5.01
-namespace::autoclean               = 0.19
-Class::Method::ModifiersX::Augment = 0.001
-File::DataClass                    = v0.44.0
-Moo                                = 1.005000
-YAML::Tiny                         = 1.62
+perl                 = 5.01
+namespace::autoclean = 0.19
+File::DataClass      = v0.44.0
+Moo                  = 1.005000
+YAML::Tiny           = 1.62
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
